--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
         "en": "Your federated organization and mobilization platform.",
         "fr": "Votre plateforme fédérée d'organisation et de mobilisation."
     },
-    "version": "1.0~ynh1",
-    "url": "https://example.com",
-    "license": "free",
+    "version": "0.1~ynh1",
+    "url": "https://joinmobilizon.org/",
+    "license": "AGPL-3.0-or-later",
     "maintainer": {
         "name": "yalh76"
     },
