--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,33 +1,18 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
+  location / {
+        if ($scheme = http) {
+        rewrite ^ https://$server_name$request_uri? permanent;
+        }
 
-  # Path to source
-  alias __FINALPATH__/ ;
+        # Standard nginx configuration
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $http_host;
 
-  # Force usage of https
-  if ($scheme = http) {
-    rewrite ^ https://$server_name$request_uri? permanent;
-  }
+        proxy_pass http://localhost:__PORT__;
 
-### Example PHP configuration (remove it if not used)
-  index index.php;
+        client_max_body_size 16m;
 
-  # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
-  #client_max_body_size 50M;
-
-  try_files $uri $uri/ index.php;
-  location ~ [^/]\.php(/|$) {
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    fastcgi_pass unix:/var/run/php/php7.0-fpm-__NAME__.sock;
-
-    fastcgi_index index.php;
-    include fastcgi_params;
-    fastcgi_param REMOTE_USER $remote_user;
-    fastcgi_param PATH_INFO $fastcgi_path_info;
-    fastcgi_param SCRIPT_FILENAME $request_filename;
-  }
-### End of PHP configuration part
-
-  # Include SSOWAT user panel.
-  include conf.d/yunohost_panel.conf.inc;
-}
+        # Include SSOWAT user panel.
+        include conf.d/yunohost_panel.conf.inc;
+    }
