--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,13 +1,29 @@
 [Unit]
-Description=Small description of the service
-After=network.target
+Description=__APP__ Mobilizon Service
+After=network.target postgresql.service
 
 [Service]
-Type=simple
-User=__APP__
-Group=__APP__
-WorkingDirectory=__FINALPATH__/
-ExecStart=__FINALPATH__/script >> /var/log/__APP__/__APP__.log 2>&1
+ExecReload=/bin/kill $MAINPID
+KillMode=process
+Restart=on-failure
+User=mobilizon
+
+Environment="MIX_ENV=prod"
+EnvironmentFile=__FINALPATH__/__APP__/.env
+
+WorkingDirectory=__FINALPATH__/__APP__
+ExecStart=/usr/bin/mix phx.server
+
+; Some security directives.
+; Use private /tmp and /var/tmp folders inside a new file system namespace, which are discarded after the process stops.
+PrivateTmp=true
+; Mount /usr, /boot, and /etc as read-only for processes invoked by this service.
+ProtectSystem=full
+; Sets up a new /dev mount for the process and only adds API pseudo devices like /dev/null, /dev/zero or /dev/random but not physical devices. Disabled by default because it may not work on devices like the Raspberry Pi.
+PrivateDevices=false
+; Ensures that the service process and all its children can never gain new privileges through execve().
+NoNewPrivileges=true
+
 
 [Install]
 WantedBy=multi-user.target
