--- a/manifest.json
+++ b/manifest.json
@@ -17,9 +17,7 @@
     },
     "multi_instance": true,
     "services": [
-        "nginx",
-        "php7.0-fpm",
-        "mysql"
+        "nginx"
     ],
     "arguments": {
         "install" : [
