--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
                 "name": "warning",
                 "type": "boolean",
                 "ask": {
-                    "text": "\nMobilizon is in early development, a lot of features are not implemented.\n\nFor advanced testing use only.\n\nPress Y to install Mobilizon.\n\n"
+                    "text": "\nMobilizon is in early development, a lot of features are not implemented.\n\nFor advanced testing use only.\n\nSelect yes to install Mobilizon.\n\n"
                 },
                 "default": false
             },
