--- a/conf/.env
+++ b/conf/.env
@@ -19,4 +19,4 @@ MOBILIZON_DATABASE_USERNAME="__DB_USER__"
 MOBILIZON_DATABASE_PASSWORD="__DB_PWD__"
 MOBILIZON_DATABASE_DBNAME="__DB_NAME__"
 MOBILIZON_DATABASE_HOST="localhost"
-MOBILIZON_DATABASE_PORT="5432"
+MOBILIZON_DATABASE_PORT=5432
