Moving log to error level

--- a/conf/.env
+++ b/conf/.env
@@ -11,7 +11,7 @@ GRAPHQL_API_FULL_PATH=""
 
 # APP
 MIX_ENV=prod
-MOBILIZON_LOGLEVEL="info"
+MOBILIZON_LOGLEVEL="error"
 MOBILIZON_SECRET="__SECRET__"
 
 # Database
