--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,18 +1,19 @@
-  location / {
-        if ($scheme = http) {
-        rewrite ^ https://$server_name$request_uri? permanent;
-        }
+location / {
+  # Force usage of https
+  if ($scheme = http) {
+    rewrite ^ https://$server_name$request_uri? permanent;
+  }
 
-        # Standard nginx configuration
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
+  # Standard nginx configuration
+  proxy_http_version 1.1;
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection "upgrade";
+  proxy_set_header Host $http_host;
 
-        proxy_pass http://localhost:__PORT__;
+  proxy_pass http://localhost:__PORT__;
 
-        client_max_body_size 16m;
+  client_max_body_size 16m;
 
-        # Include SSOWAT user panel.
-        include conf.d/yunohost_panel.conf.inc;
-    }
+  # Include SSOWAT user panel.
+  include conf.d/yunohost_panel.conf.inc;
+}
