add_header -> more_set_headers

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -21,13 +21,13 @@ location / {
     root __FINALPATH__/mobilizon/priv/static;
     etag off;
     access_log off;
-    add_header Cache-Control "public, max-age=31536000, immutable";
+    more_set_headers "Cache-Control: public, max-age=31536000, immutable";
   }
 
   location ~ ^/(media|proxy) {
     etag off;
     access_log off;
-    add_header Cache-Control "public, max-age=31536000, immutable";
+    more_set_headers "Cache-Control: public, max-age=31536000, immutable";
     proxy_pass http://localhost:__PORT__;
   }
 
