--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -19,7 +19,7 @@ Environment=MOBILIZON_INSTANCE_SECRET_KEY=__SECRET_KEY__
 Environment=MOBILIZON_INSTANCE_NAME=Mobilizon
 Environment=MOBILIZON_INSTANCE_EMAIL=__APP__@__DOMAIN__
 Environment=MOBILIZON_REPLY_EMAIL=__APP__@__DOMAIN__
-Environment=MOBILIZON_UPLOADS=/app/uploads
+Environment=MOBILIZON_UPLOADS=/home/yunohost.multimedia/__APP__/uploads
 Environment=MOBILIZON_DATABASE_USERNAME=__DB_USER__
 Environment=MOBILIZON_DATABASE_PASSWORD=__DB_PWD__
 Environment=MOBILIZON_DATABASE_DBNAME=__DB_NAME__
