Apply last example_ynh

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,11 +1,11 @@
-location / {
+location __PATH__/ {
   # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
 
-  # the nginx default is 1m, not enough for large media uploads
-  client_max_body_size 16m;
+  # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
+  client_max_body_size 50M;
 
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
