--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -5,8 +5,8 @@ After=network.target postgresql.service
 [Service]
 User=__APP__
 WorkingDirectory=__FINALPATH__/live/
-ExecStart=/usr/bin/env mix phx.server
-ExecReload=/bin/kill $MAINPID
+ExecStart=__FINALPATH__/live/bin/mobilizon start
+ExecStop=__FINALPATH__/live/bin/mobilizon stop
 KillMode=process
 Restart=on-failure
 Environment=MIX_ENV=prod
@@ -14,14 +14,14 @@ Environment=MIX_ENV=prod
 SyslogIdentifier=mobilizon
 
 ; Some security directives.
+; Ensures that the service process and all its children can never gain new privileges through execve().
+NoNewPrivileges=yes
 ; Use private /tmp and /var/tmp folders inside a new file system namespace, which are discarded after the process stops.
-PrivateTmp=true
+PrivateTmp=yes
+; Sets up a new /dev mount for the process and only adds API pseudo devices like /dev/null, /dev/zero or /dev/random but not physical devices. Disabled by default because it may not work on devices like the Raspberry Pi.
+PrivateDevices=no
 ; Mount /usr, /boot, and /etc as read-only for processes invoked by this service.
 ProtectSystem=full
-; Sets up a new /dev mount for the process and only adds API pseudo devices like /dev/null, /dev/zero or /dev/random but not physical devices. Disabled by default because it may not work on devices like the Raspberry Pi.
-PrivateDevices=false
-; Ensures that the service process and all its children can never gain new privileges through execve().
-NoNewPrivileges=true
 
 
 [Install]
