--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "mobilizon",
     "packaging_format": 1,
     "description": {
-        "en": "A decentralized and federated platform to organize events",
-        "fr": "Une plateforme décentralisée et fédérée pour organiser des événements"
+        "en": "Decentralized and federated platform to organize events",
+        "fr": "Plateforme décentralisée et fédérée pour organiser des événements"
     },
     "version": "3.1.3~ynh2",
     "url": "https://joinmobilizon.org/",
