--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,6 +7,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 Environment=MIX_ENV=prod
+Environment=MOBILIZON_CONFIG_PATH="__INSTALL_DIR__/config.exs"
 WorkingDirectory=__INSTALL_DIR__/live/
 ExecStart=__INSTALL_DIR__/live/bin/mobilizon start
 ExecStop=__INSTALL_DIR__/live/bin/mobilizon stop
