--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -20,7 +20,7 @@ proxy_set_header X-Forwarded-Proto $scheme;
 
 location / {
     expires off;
-    more_set_headers "Cache-Control : public, max-age=0, s-maxage=0, must-revalidate" always;
+    more_set_headers "Cache-Control: public, max-age=0, s-maxage=0, must-revalidate";
     proxy_pass http://localhost:__PORT__;
 }
 
