--- a/scripts/config
+++ b/scripts/config
@@ -6,8 +6,8 @@ source /usr/share/yunohost/helpers
 ynh_abort_if_errors
 
 ynh_app_config_validate() {
-    if [ -z $(ynh_psql_db_shell $db_name <<< "SELECT name, value FROM admin_settings WHERE name='instances_languages';") ]
-    then
+    empty_rows=$(ynh_psql_db_shell $db_name <<< "SELECT name, value FROM admin_settings WHERE name='instances_languages';")
+    if [ -z "${empty_rows:-}" ]; then
         ynh_die --message="You need first connect with the admin user to your instance and create a profile"
     fi
 
@@ -16,6 +16,11 @@ ynh_app_config_validate() {
 
 ynh_app_config_apply() {
     _ynh_app_config_apply
+
+    if [ -z $language]
+        language="fr"
+    ynh_app_setting_set_default --key="language" --value="$language"
+    fi
 
     ynh_psql_db_shell $db_name <<< "UPDATE admin_settings SET value = '[\"$language\"]' WHERE name ='instance_languages';"
 
