--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -21,7 +21,7 @@ proxy_set_header X-Forwarded-Proto $scheme;
 location / {
     expires off;
     more_set_headers "Cache-Control: public, max-age=0, s-maxage=0, must-revalidate";
-    proxy_pass http://localhost:__PORT__;
+    proxy_pass http://127.0.0.1:__PORT__;
 }
 
 location ~ ^/(assets|img) {
@@ -33,7 +33,7 @@ location ~ ^/(assets|img) {
 location ~ ^/(media|proxy) {
     access_log off;
     more_set_headers "Cache-Control: public, max-age=31536000, s-maxage=31536000, immutable";
-    proxy_pass http://localhost:__PORT__;
+    proxy_pass http://127.0.0.1:__PORT__;
 }
 
 error_page 500 501 502 503 504 @error;
